<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TODO: organize this strings -->
    <string name="form_song_search">Search your song</string>
    <string name="form_min">min</string>
    <string name="form_min_input">30</string>
    <string name="form_search_button">Search song</string>
    <string name="add_playlist_to_route">Add Playlist To Route</string>
    <string name="start_hint">Start hint</string>
    <string name="end_hint">End hint</string>
    <string name="user">User</string>
    <string name="followers">Followers</string>
    <string name="shared_routes">Shared Routes</string>
    <string name="following">Following</string>

    <!-- general purpose -->
    <string name="app">Trackify</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="sign_off">Sign off</string>
    <string name="recently_added">Recently added</string>
    <string name="custom">Custom</string>
    <string name="error">Something went wrong</string>
    <string name="userNameNotFound">Could not find username</string>
    <string name="followersNotFound">Could not find followers</string>
    <string name="couldNotFollow">Could not follow user</string>
    <string name="couldNotUnfollow">Could not unfollow user</string>
    <string name="couldNotFindRoutes">Could not find any routes</string>
    <string name="couldNotDrawRoute">Could not draw the route on the map</string>
    <string name="couldNotFindFollowingUsers">Could not find any following users</string>
    <string name="couldNotFindLocation">No Location Detected. Make sure permissions are granted and location is on.</string>

    <string name="internet">No internet connection</string>
    <string name="preview_url">Preview unavailable for this track</string>

    <!-- login -->
    <string name="login">Login with Spotify</string>

    <!-- internet alert dialog -->
    <string name="alert_title">Internet Connection Alert</string>
    <string name="alert_body">Please, check your internet connection</string>
    <string name="alert_close">Close</string>
    <string name="alert_retry">Retry</string>
    <string name="alert_bad_retry">Sorry, no internet connection detected. Please, try again.</string>


    <!-- bottom menu -->
    <string name="playlists_menu">Playlists</string>
    <string name="routes_menu">Explore</string>
    <string name="profile_menu">Profile</string>

    <!-- playlists landing -->
    <string name="create_playlist_menu">Create playlist</string>

    <!-- playlist create landing -->
    <string name="save_button_description">Save playlist button</string>
    <string name="form_duration">Playlist duration:</string>
    <string name="form_title">Playlist Title</string>
    <string name="form_selected_songs">Current selected songs</string>
    <string name="playlist_save_toast">Playlist created</string>

    <!-- playlist search landing -->
    <string name="track_add_description">Add track to playlist</string>

    <!-- playlist details landing -->
    <string name="playlist_cover_description">Playlist cover</string>
    <string name="spotify_button">Play on Spotify</string>
    <string name="tracks_text">Tracks</string>
    <string name="sort_by_text">sort by</string>
    <string name="sort_order_description">Sort order</string>
    <string name="track_cover_description">Track cover</string>
    <string name="track_more_description">Show track details</string>
    <string name="track_drag_description">Drag and drop track</string>

    <!-- routes landing -->
    <string name="create_route_menu">Create route</string>

    <!-- routes create landing -->
    <string name="playlist_to_share_title">Playlist to be shared</string>
    <string name="route_name">Route name</string>
    <string name="create_route_description">Tap in the map to add up to 9 markers</string>
    <string name="clear_markers">Clear</string>
    <string name="create_route_title">Create route and select a playlist</string>
    <string name="create_route_markers_error">Introduce at least 2 markers in the map</string>
    <string name="create_route_name_error">Introduce the name of the route</string>
    <string name="create_route_playlist_selection_error">Select one playlist</string>
    <string name="create_route_unknown_error">An error have occurred, please try again later</string>Route created successfully!
    <string name="create_route_success">Route created successfully!</string>
    <string name="create_route_location_error">No Location Detected. Make sure permissions are granted and location is enabled</string>


    <!-- user landing -->
    <string name="share_route_title">Sharing route</string>
    <string name="share_route_text">Check the playlist on this route from #Trackify</string>
    <string name="view_playlist">View playlist</string>
    <string name="route_delete_success">Route deleted</string>
    <string name="route_delete_error">Could not delete route</string>

    <!-- user profile -->
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="qr_code">QR code</string>
    <string name="scan_qr">Scan QR</string>

    <!-- arrays -->
    <string-array name="duration_list">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>

    <!-- plurals -->
    <plurals name="playlists">
        <item quantity="one">%d playlist</item>
        <item quantity="other">%d playlists</item>
    </plurals>
    <plurals name="tracks">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="followers">
        <item quantity="one">%d follower</item>
        <item quantity="other">%d followers</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
</resources>