<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/raisin_black"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dialog_margin"
        app:srcCompat="@drawable/ic_signal_wifi_bad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alert_title"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/dialog_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dialog_margin"
        android:gravity="center"
        android:text="@string/alert_body"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/dialog_body" />

    <View
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green_blue_crayola" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCloseCustomDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_horizontal_margin"
            android:backgroundTint="@color/error"
            android:textColor="#FFFFFF"
            android:text="@string/alert_close" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryCustomDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dialog_margin"
            android:layout_marginLeft="@dimen/dialog_horizontal_margin"
            android:text="@string/alert_retry" />

    </LinearLayout>
</LinearLayout>