<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toBottomOf="@+id/start_coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shareButton"
        android:background="@color/green_blue_crayola"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playlist_to_share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:text="@string/playlist_to_share_title"
        app:layout_constraintEnd_toEndOf="@+id/end_coordinates"
        app:layout_constraintTop_toBottomOf="@+id/end_coordinates" />

    <EditText
        android:id="@+id/start_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="313dp"
        android:autofillHints="@string/start_hint"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/start_title"
        app:layout_constraintStart_toEndOf="@+id/start_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pin_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/start_coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_coordinates"
        app:layout_constraintTop_toTopOf="@+id/start_coordinates"
        app:srcCompat="@drawable/ic_my_location" />

    <ImageButton
        android:id="@+id/imgBtnEndRoute"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/end_coordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_coordinates"
        app:layout_constraintTop_toTopOf="@+id/end_coordinates"
        app:srcCompat="@drawable/ic_finish" />

    <EditText
        android:id="@+id/end_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:autofillHints="@string/end_hint"
        android:ems="10"
        android:inputType="text"
        android:labelFor="@id/end_title"
        app:layout_constraintStart_toStartOf="@+id/start_coordinates"
        app:layout_constraintTop_toBottomOf="@+id/start_coordinates" />

    <TextView
        android:id="@+id/start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/start"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_coordinates"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/end_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/end"
        app:layout_constraintBaseline_toBaselineOf="@+id/end_coordinates"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="30dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_to_share_title"
        android:background="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>