<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/name"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/playlists_create_layout_padding"
        android:backgroundTint="@android:color/white"
        android:backgroundTintMode="src_in"
        android:hint="@string/form_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/playlists_create_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playlistDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/playlists_create_duration_padding"
        android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
        android:layout_marginHorizontal="@dimen/playlists_create_layout_horizontal_padding"
        android:text="@string/form_duration"
        android:textColor="@android:color/white"
        android:textSize="@dimen/playlists_create_text_size"
        app:layout_constraintEnd_toStartOf="@+id/timeSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <Spinner
        android:id="@+id/timeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/duration_list"
        android:layout_marginEnd="@dimen/playlists_create_spinner_padding"
        app:layout_constraintBottom_toBottomOf="@+id/playlistDurationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playlistDurationText"
        app:layout_constraintTop_toTopOf="@+id/playlistDurationText" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/playlists_create_divider"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/golden_poppy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlistDurationText" />

    <TextView
        android:id="@+id/currentSongsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/playlists_create_layout_horizontal_padding"
        android:paddingVertical="@dimen/playlists_create_layout_vertical_padding"
        android:text="@string/form_selected_songs"
        android:textColor="@android:color/white"
        android:textSize="@dimen/playlists_create_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/form_search_button"
        android:elevation="16dp"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/currentSongsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/currentSongsText"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:rippleColor="@color/golden_poppy"
        app:srcCompat="@drawable/ic_music_note_plus" />
</androidx.constraintlayout.widget.ConstraintLayout>