<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/playlist_cover_description"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/placeholder_playlist" />

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/placeholder_fade"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/placeholder_corner"
        android:orientation="vertical"
        android:paddingStart="@dimen/screen_margin_horizontal"
        android:paddingTop="12dp"
        android:paddingEnd="@dimen/screen_margin_horizontal"
        android:translationY="-15dp"
        app:layout_constraintTop_toBottomOf="@+id/cover">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Headline4"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="12sp"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/spotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1DB954"
            android:text="@string/spotify_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_spotify"
            app:iconTint="@android:color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/tracks_text"
            android:textAppearance="@style/Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.apm.trackify.util.widget.DottedDivider
            android:layout_width="match_parent"
            android:layout_height="2dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>